ThrowPerformance getResult